Add: texto explicativo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <p>Editando el archivo.</p>
 
 <h2>Soy un titular</h2>
+<p>Este texto es un parrafo que explica el titular de arriba.</p>
 
 </body>
 </html>
